[gd_scene load_steps=2 format=3 uid="uid://bm1tabwtq8mjc"]

[ext_resource type="Script" path="res://scripts/area_de_detecão_bar.gd" id="1_0om0u"]

[node name="Area_de_detecão_bar" type="Node2D"]
script = ExtResource("1_0om0u")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.1

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
